changed font, fixed gaps between each section, added styling to hero content, added styling to profile image

--- a/css/main.css
+++ b/css/main.css
@@ -5,14 +5,14 @@
 }
 
 body {
-  font-family: "Inter", sans-serif;
+  font-family: "Quicksand", sans-serif;
   color: #0F172A;
   background: linear-gradient(135deg, #FCE7F3 0%, #F9C5D1 50%, #FDE9F3 100%);
   line-height: 1.6;
 }
 
 h1, h2, h3 {
-  font-family: "Poppins", sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 
 section {
@@ -42,6 +42,16 @@ section {
   border-radius: 50%;
   aspect-ratio: 1/1;
   object-fit: cover;
+  border: 5px solid white;
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.1);
+}
+
+.navbar__link i {
+  color: #FCE7F3;
+}
+
+section {
+  padding: 20rem 2rem;
 }
 
 .hero {
@@ -51,8 +61,15 @@ section {
   justify-content: center;
   min-height: 80vh;
   text-align: center;
-  padding: 0 1.5rem;
+  padding: 20rem 1.5rem;
   gap: 10rem;
+}
+
+.hero__content {
+  background: linear-gradient(135deg, #FCE7F3 0%, #fddff0 50%, #FDE9F3 100%);
+  padding: 5rem;
+  border-radius: 40px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
 }
 
 .navbar {
@@ -78,7 +95,7 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 3px solid rgb(237, 141, 226);
+  border: 3px solid rgb(246, 246, 246);
   border-radius: 16px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
   background-color: rgba(255, 255, 255, 0.3);
