--- a/scss/sections.scss
+++ b/scss/sections.scss
@@ -1,3 +1,7 @@
+section{
+    padding: 20rem 2rem;
+}
+
 .hero{
     display: flex;
     flex-direction: row;
@@ -5,8 +9,15 @@
     justify-content: center;
     min-height: 80vh;
     text-align: center;
-    padding: 0 1.5rem;
+    padding: 20rem 1.5rem;
     gap: 10rem;
+}
+
+.hero__content {
+    background: linear-gradient(135deg, #FCE7F3 0%, #fddff0 50%, #FDE9F3 100%);
+    padding: 5rem;
+    border-radius: 40px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
 }
 
 .navbar {
@@ -35,7 +46,7 @@
     align-items: center;
     justify-content: center;
 
-    border: 3px solid rgb(237, 141, 226);
+    border: 3px solid rgb(246, 246, 246);
     border-radius: 16px;            
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
 
