--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -6,8 +6,8 @@ $text-dark: #0F172A;
 $white: #ffffff;
 
 // Fonts
-$font-main: 'Inter', sans-serif;
-$font-heading: 'Poppins', sans-serif;
+$font-main: "Quicksand", sans-serif;
+$font-heading: "Quicksand", sans-serif;
 
 // Spacing
 $section-padding: 4rem 1.5rem;
